# entrypoint

./: .gitignore  LICENSE  README.md  pyproject.toml
entrypoint/: __init__.py  discovery.py  dispatcher.py  examples.py  main.py  parser.py
epmanager/: __init__.py  discovery.py  dispatcher.py  examples.py
tests/: examples.py  test_entrypoint.py
