[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "entrypoint"
version = "0.6.0+64"
description = ""
authors = [ "Karl Knechtel <karl.a.knechtel@gmail.com>",]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
entrypoint-update-metadata = "entrypoint.discovery:write_all.invoke"
entrypoint-wrapper = "entrypoint.discovery:make_wrapper_script.invoke"
entrypoint-doc-example-1 = "entrypoint.examples:doc_example_1.invoke"
entrypoint-doc-example-2 = "entrypoint.examples:doc_example_2.invoke"
entrypoint-doc-example-3 = "entrypoint.examples:doc_example_3.invoke"
entrypoint-doc-example-4 = "entrypoint.examples:doc_example_4.invoke"
entrypoint-empty = "entrypoint.examples:empty.invoke"
entrypoint-un-documented = "entrypoint.examples:un_documented.invoke"
entrypoint-example = "entrypoint.examples:example.invoke"
entrypoint-renamed-1 = "entrypoint.examples:tricky_1.invoke"
entrypoint-custom-parser = "entrypoint.examples:custom_parser.invoke"
entrypoint-hard = "entrypoint.examples:hard.invoke"
entrypoint-defaults = "entrypoint.examples:defaults.invoke"
entrypoint-positional-by-keyword = "entrypoint.examples:positional_by_keyword.invoke"
entrypoint-inverse-flag = "entrypoint.examples:inverse_flag.invoke"
